# shogiesa

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_ja.md
.github/workflows/: ci.yml
crates/fake-usi-engine/: Cargo.toml
crates/fake-usi-engine/src/: lib.rs  main.rs
crates/shogiesa/: Cargo.toml
crates/shogiesa-cli/: Cargo.toml  build.rs
crates/shogiesa-cli/src/: main.rs
crates/shogiesa-cli/tests/: cli_test.rs  lineprior_dogfood_script_test.rs
crates/shogiesa-core/: Cargo.toml
crates/shogiesa-core/benches/: board_bench.rs
crates/shogiesa-core/src/: board.rs  lib.rs  sfen.rs
crates/shogiesa-csa/: Cargo.toml
crates/shogiesa-csa/src/: board.rs  extract.rs  lib.rs
crates/shogiesa-csa/tests/: extract_test.rs
crates/shogiesa-kif/: Cargo.toml
crates/shogiesa-kif/src/: lib.rs
crates/shogiesa-kif/tests/: kif_test.rs
crates/shogiesa-pack/: Cargo.toml
crates/shogiesa-pack/src/: lib.rs
crates/shogiesa-stratify/: Cargo.toml
crates/shogiesa-stratify/src/: lib.rs
crates/shogiesa-usi/: Cargo.toml
crates/shogiesa-usi/src/: lib.rs
crates/shogiesa-usi/tests/: usi_test.rs
crates/shogiesa/src/: lib.rs
crates/stratifykit-core/: Cargo.toml  README.md
crates/stratifykit-core/src/: coverage.rs  hash.rs  heap.rs  lib.rs  quota.rs  sampling.rs
docs/: LINEPRIOR_DOGFOOD.md  SEKIREI_GATE_EVALUATION.md  THEORY.md
scripts/: lineprior_dogfood.sh  sekirei_dataset_ablation.sh
tests/fixtures/: fake_lineprior.sh  fake_lineprior_incomplete.sh  match_engine1_wins.txt  match_engine2_wins.txt  match_position_sfen_king_in_hand.txt  match_position_sfen_nonstandard_start.txt  match_position_sfen_standard.txt  match_promotions_and_drops.txt  sample.csa  sample.kif  sample_draw.csa  sample_handicap.kif
