[workspace]
members = [
    "crates/shogiesa-core",
    "crates/shogiesa-csa",
    "crates/shogiesa-usi",
    "crates/shogiesa-kif",
    "crates/shogiesa-pack",
    "crates/shogiesa",
    "crates/shogiesa-cli",
    "crates/fake-usi-engine",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/shogiesa"
homepage = "https://github.com/kent-tokyo/shogiesa"
