[package]
name = "shogiesa-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shogiesa"
path = "src/main.rs"

[dependencies]
shogiesa-core = { path = "../shogiesa-core" }
shogiesa-csa = { path = "../shogiesa-csa" }
shogiesa-usi = { path = "../shogiesa-usi" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
