[package]
name = "shogiesa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for shogiesa — Shogi training-data feed for NNUE engines"
keywords = ["shogi", "nnue", "sfen", "training-data", "usi"]
categories = ["command-line-utilities", "game-engines"]

[[bin]]
name = "shogiesa"
path = "src/main.rs"

[dependencies]
shogiesa-core = { path = "../shogiesa-core", version = "0.2" }
shogiesa-csa = { path = "../shogiesa-csa", version = "0.2" }
shogiesa-kif = { path = "../shogiesa-kif", version = "0.2" }
shogiesa-usi = { path = "../shogiesa-usi", version = "0.2" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
