[package]
name = "shogiesa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared domain types for shogiesa — Shogi training-data feed for NNUE engines"
keywords = ["shogi", "nnue", "sfen", "training-data", "chess"]
categories = ["game-engines", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "board_bench"
harness = false
