[package]
name = "shogiesa-csa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CSA game record ingestion for shogiesa — extract Shogi positions as SFEN"
keywords = ["shogi", "csa", "sfen", "training-data"]
categories = ["game-engines", "parser-implementations"]

[dependencies]
shogiesa-core = { path = "../shogiesa-core", version = "0.5" }
csa = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
