[package]
name = "shogiesa-kif"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "KIF game record ingestion for shogiesa — extract Shogi positions as SFEN"
keywords = ["shogi", "kif", "sfen", "training-data"]
categories = ["game-engines", "parser-implementations"]

[dependencies]
shogiesa-core = { path = "../shogiesa-core", version = "0.5" }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
