[package]
name = "shogiesa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shogi training-data feed for NNUE engines — meta crate"
keywords = ["shogi", "nnue", "sfen", "training-data", "usi"]
categories = ["command-line-utilities", "game-engines"]

[dependencies]
shogiesa-core = { path = "../shogiesa-core", version = "0.3" }
shogiesa-csa  = { path = "../shogiesa-csa",  version = "0.3" }
shogiesa-kif  = { path = "../shogiesa-kif",  version = "0.3" }
shogiesa-usi  = { path = "../shogiesa-usi",  version = "0.3" }
shogiesa-pack = { path = "../shogiesa-pack", version = "0.3" }
